more spacing fixes

--- a/Unit09/css/styles.css
+++ b/Unit09/css/styles.css
@@ -863,15 +863,13 @@ footer p {
   #planVisit {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 2%;
+    margin-left: 1%;
     margin-bottom: 5rem;
     padding: 1%; }
 
   #planVisit div {
-    width: 49%; }
-
-  #planVisit div:nth-child(2), #planVisit div:nth-child(4) {
-    margin-right: 0; }
+    width: 49%;
+    margin-right: 1%; }
 
   .tile {
     background-size: unset; } }
@@ -917,7 +915,7 @@ footer p {
     height: 300px; }
 
   #planVisit div:nth-child(2) {
-    margin-right: 1%; }
+    margin-right: 0; }
 
   #planVisit div:nth-child(n) a {
     height: 300px; } }
