--- a/Unit09/scss/_large.scss
+++ b/Unit09/scss/_large.scss
@@ -45,6 +45,7 @@ nav a {
 }
 
 
+
 #planVisit div{
     width: 24.2%;
     height: 300px;
@@ -52,7 +53,7 @@ nav a {
   }
 
   #planVisit div:nth-child(2), {
-    margin-right: 1%;
+    margin-right: 0;
     
   }
 
