--- a/Unit09/scss/_medium.scss
+++ b/Unit09/scss/_medium.scss
@@ -64,19 +64,19 @@ header h2 {
 #planVisit {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 2%;
+  margin-left: 1%;
   margin-bottom: 5rem;
   padding: 1%;
 }
 
 #planVisit div{
   width: 49%;
-  // margin-right: 1%;
+  margin-right: 1%;
 
 }
 
 #planVisit div:nth-child(2), #planVisit div:nth-child(4) {
-  margin-right: 0;
+  // margin-right: 1%;
 }
 
 .tile{
